--- a/230328IQ.vcxproj.filters
+++ b/230328IQ.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CircularDeque.h">
+    <ClInclude Include="temp.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CircularQueue.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CircularDeque.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
