--- a/230328IQ.vcxproj
+++ b/230328IQ.vcxproj
@@ -21,9 +21,12 @@
   <ItemGroup>
     <ClInclude Include="CircularDeque.h" />
     <ClInclude Include="CircularQueue.h" />
+    <ClInclude Include="Location2d.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BFS for Maze.cpp" />
+    <ClCompile Include="temp.cpp" />
     <ClCompile Include="미팅 주선 프로그램.cpp" />
     <ClCompile Include="정렬 가능 여부 확인 프로그램.cpp" />
   </ItemGroup>
